--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.35.0",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.14",
+    "lightningcss.linux-x64-gnu.node": "^1.29.3"
   }
 }
